Functionality: Added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="project-wrapper">
-        <section class="header">
+        <section id="header" class="header">
             <div class="content-container">
                 <div class="header_content-wrapper">
                     <div class="logo">
@@ -28,21 +28,22 @@
                         <p>Design & development studio from Riga.<br>
                             houseplant@gmail.com</p>
                         <div class="navigation_buttons inter-regular">
-                            <button>Work</button>
-                            <button>What we do</button>
-                            <button>About</button>
-                            <button>Contact</button>
+                            <a href="#work">Work</a>
+                            <a href="#whatWeDo">What we do</a>
+                            <a href="#about">About</a>
+                            <a href="#contact">Contact</a>
                         </div>
                     </div>
 
                 </div>
             </div>
         </section>
-        <section class="work">
+        <section id="work" class="work">
             <div class="content-container">
                 <div class="title ">WORK</div>
                 <div class="projects_showcase">
                     <div class="project project1">
+                        <a class="projectImage" href="http://"></a>
                             <img src="/img/project1.svg" alt="">
                         <div class="decorLine"></div>
                         <div class="projectText">
@@ -51,6 +52,7 @@
                         </div>
                     </div>
                     <div class="project project2">
+                        <a class="projectImage2" href="http://"></a>
                             <img src="/img/project2.svg" alt="">
                         <div class="decorLine"></div>
                         <div class="projectText">
@@ -59,6 +61,7 @@
                         </div>
                     </div>
                     <div class="project project3">
+                        <a class="projectImage3" href="http://"></a>
                             <img src="/img/project3.svg" alt="">
                         <div class="decorLine"></div>
                         <div class="projectText">
@@ -70,7 +73,7 @@
                 </div>
             </div>
         </section>
-        <section class="we_do">
+        <section id="whatWeDo" class="we_do">
             <div class="content-container">
                 <div class="title ">WE DO</div>
                 <div class="we_do_offer_listing">
@@ -105,12 +108,12 @@
                 </div>
             </div>
         </section>
-        <section class="about">
+        <section id="about" class="about">
             <div class="content-container">
                 <div class="title">ABOUT</div>
                     <div class="inter-italic about_content">
                         <p class="inter-italic paragraphTexts">Houseplant is a small web design studio from Riga. A group of freelancers working on hobby projects and websites for small businesses. Houseplant is a small web design studio from Riga.</p>
-                        <div class="teamPictures">
+                        <div class="teamPictures inter-italic">
                             <!--need to fix this class cause it will be global for projects and persons-->
                             <img src="./img/teamPic1.svg" alt="">
                             <div class="decorLine"></div>
@@ -139,8 +142,8 @@
                         </div>
                     </div>
             </div>
-        </section> <!-- Needs more development cant get data form design-->
-        <section class="contact_form">
+        </section>
+        <section id="contact" class="contact_form">
             <div class="content-container">
                 <div class="title">LETS CHAT!</div>
                 <p class="paragraphTexts">Send all your questions via email, to learn more about what we do and ask more specific questions about your project and pricing. You can use the form below or send an email to houseplant@gmail.com</p>
