Visuals: Adding image to team section

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         web design studio from Riga.</p>
                     <div class="teamPictures inter-italic">
                         <!--need to fix this class cause it will be global for projects and persons-->
-                        <img id="teamPic1">
+                        <img id="teamPic1" src="./img/teamPic1.svg">
                         <div class="decorLineForTeamPic"></div>
                         <div class="personDetails">
                             <div class="name">Arturs Vaskinels</div>
