Functionality: Project images now leads to project pages. Style: added hover styles to navigation buttons

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div id="mobileNavWithHamburgerMenu" class="mobileNavWithHamburgerMenu">
                 <div id="mobileNavWithHamburgerMenuWrapper" class="mobileNavWithHamburgerMenuWrapper">
-                    <div class="logoWithNameMobile burgerElement">
+                    <div onclick="location.href='#header'" class="logoWithNameMobile burgerElement">
                         <img src="/img/navLogo.svg" alt="">
                     </div>
                     <div class="burgerMenuDivider"></div>
@@ -65,7 +65,7 @@
             </div>
             <div id="stickyNavPopUp" class="stickyNavPopUp">
                 <div id="stickyNavPopUpWrapper" class="stickyNavPopUpWrapper">
-                    <div class="stickyNavPopUpLogoWithName burgerElement">
+                    <div onclick="location.href='#header'" class="stickyNavPopUpLogoWithName burgerElement">
                         <img src="/img/navLogo.svg" alt="">
                     </div>
                     <div class="burgerMenuDivider"></div>
@@ -115,7 +115,7 @@
             <div class="content-container">
                 <div class="title ">WORK</div>
                 <div class="projects_showcase">
-                    <div class="project project1">
+                    <div onclick="location.href='project.html'" class="project project1">
                         <a class="projectImage" href="http://"></a>
                         <img src="/img/project1.svg" alt="">
                         <div class="decorLineForProject"></div>
@@ -124,7 +124,7 @@
                             <div class="projectDescription">Project description</div>
                         </div>
                     </div>
-                    <div class="project project2">
+                    <div onclick="location.href='project.html'" class="project project2">
                         <a class="projectImage2" href="http://"></a>
                         <img src="/img/project2.svg" alt="">
                         <div class="decorLineForProject"></div>
@@ -133,7 +133,7 @@
                             <div class="projectDescription">Project description</div>
                         </div>
                     </div>
-                    <div class="project project3">
+                    <div onclick="location.href='project.html'" class="project project3">
                         <a class="projectImage3" href="http://"></a>
                         <img src="/img/project3.svg" alt="">
                         <div class="decorLineForProject"></div>
