Functionality: Changed animation on navigation slideout and navigation logo now leads to Header section

--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 <body>
     <div class="content-container">
         <div class="projectPageHeader">
-            <div class="logo">
+            <div onclick="location.href='index.html#header'" class="logo">
                 <div class="logoWithName">
                 </div>
             </div>
