Style: Changes Fonts for Title and paragraphs

--- a/project.html
+++ b/project.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="project.css">
 </head>
@@ -27,7 +30,7 @@
         </div>
         <div class="projectContentInnerWrapper">
             <div class="titleWithText">
-                <h1 class="projectTitle">Project Title</h1>
+                <h1 class="projectTitle">Project title</h1>
                 <div class="projectPageText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
                     sequi ex quibusdam in fuga fugit natus sunt obcaecati! Ipsum odio ducimus sapiente natus dolor
                     laboriosam soluta rerum accusantium corporis quis.</div>
@@ -47,7 +50,7 @@
                 <div class="imageCaption">Caption</div>
             </div>
             <div class="titleWithText">
-                <h1 class="projectTitle">Project Title</h1>
+                <h1 class="projectTitle">Project title</h1>
                 <div class="projectPageText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
                     sequi ex quibusdam in fuga fugit natus sunt obcaecati! Ipsum odio ducimus sapiente natus dolor
                     laboriosam soluta rerum accusantium corporis quis.</div>
@@ -73,8 +76,9 @@
                         </div>
                     </div>
                     <div class="titleWithText">
-                        <h1 class="projectTitle">Project Title</h1>
-                        <div class="projectPageFooterText">Lorem ipsum dolor sit amet consectetur adipisicing
+                        <h1 class="projectTitle">Project title</h1>
+                        <div class="projectPageFooterText projectPageText">Lorem ipsum dolor sit amet consectetur
+                            adipisicing
                             elit. Nisi sequi ex quibusdam in fuga fugit natus sunt obcaecati! Ipsum odio ducimus
                             sapiente
                             natus dolor laboriosam soluta rerum accusantium corporis quis.</div>
